# rat-roulette

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/rat_roulette_pkg/lib/rat_roulette_pkg/: rat_roulette_node
ros2_ws/install/rat_roulette_pkg/share/rat_roulette_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rat_roulette_pkg/share/rat_roulette_pkg/launch/: roulette_launch.py
ros2_ws/log/: latest_build
ros2_ws/src/rat_roulette_pkg/: setup.cfg  setup.py
ros2_ws/src/rat_roulette_pkg/rat_roulette_pkg/: rat_roulette_node.py
