<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rat_roulette_pkg</name>
  <version>0.0.0</version>
  <description>This package implements an interactive simplified roulette game using a hybrid robot control architecture.</description>
  <maintainer email="om228@cornell.edu">turtwig</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>turtlebot4_navigation</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
